モジュールを自動生成する

--- a/content/component/class.js.store.tmpl
+++ b/content/component/class.js.store.tmpl
@@ -1,6 +1,6 @@
 import React from "react";
 import PropTypes from "prop-types";
-import styles from "./scss/{{ComponentName}}.scss";
+import styles from "./index.scss";
 
 import { connect } from "react-redux";
 import { bindActionCreators } from "redux";
