#1 actionsを自動生成する機能を追加

--- a/content/store/actions.js.tmpl
+++ b/content/store/actions.js.tmpl
@@ -1,3 +1,4 @@
 // TODO {{ACTION_NAME}}のpayloadを設定する
 export const {{ACTION_NAME}} = "{{ACTION_NAME}}";
-export const {{actionName}} = () => {type:"{{ACTION_NAME}}" };
+export const {{actionName}} = () => {type: {{ACTION_NAME}} };
+
