--- a/content/component/class.js.store.tmpl
+++ b/content/component/class.js.store.tmpl
@@ -17,6 +17,7 @@ const mapStateToProps = state => ({ store: state });
 )
 class {{ComponentName}} extends React.Component {
   render() {
+    //TODO write component detail
     return null;
   }
 }
