--- a/content/component/class.js.tmpl
+++ b/content/component/class.js.tmpl
@@ -4,6 +4,7 @@ import styles from "./index.scss";
 
 class {{ComponentName}} extends React.Component {
   render() {
+    //TODO write component detail
     return null;
   }
 }
