--- a/content/component/func.js.tmpl
+++ b/content/component/func.js.tmpl
@@ -3,6 +3,7 @@ import PropTypes from "prop-types";
 import styles from "./scss/{{ComponentName}}.scss";
 
 const {{ComponentName}} = props => {
+  //TODO write component detail
   return null;
 }
 
