--- a/content/component/func.js.tmpl
+++ b/content/component/func.js.tmpl
@@ -1,6 +1,6 @@
 import React from "react";
 import PropTypes from "prop-types";
-import styles from "./scss/{{ComponentName}}.scss";
+import styles from "./{{ComponentName}}Style.sass";
 
 const {{ComponentName}} = props => {
   //TODO write component detail
@@ -9,6 +9,7 @@ const {{ComponentName}} = props => {
 
 {{ComponentName}}.propTypes = {
   //TODO props: PropTypes.string.isRequired
+  children: PropTypes.any
 };
 
 export default {{ComponentName}};
