--- a/content/component/class.js.tmpl
+++ b/content/component/class.js.tmpl
@@ -1,6 +1,6 @@
-import React from "react";
-import PropTypes from "prop-types";
-import styles from "./{{ComponentName}}Style.sass";
+import React from 'react';
+import PropTypes from 'prop-types';
+import styles from './{{ComponentName}}Style.sass';
 
 class {{ComponentName}} extends React.Component {
   render() {
