--- a/content/component/func.js.tmpl
+++ b/content/component/func.js.tmpl
@@ -1,6 +1,6 @@
-import React from "react";
-import PropTypes from "prop-types";
-import styles from "./{{ComponentName}}Style.sass";
+import React from 'react';
+import PropTypes from 'prop-types';
+import styles from './{{ComponentName}}Style.sass';
 
 const {{ComponentName}} = props => {
   //TODO write component detail
