--- a/content/component/component.test.js.tmpl
+++ b/content/component/component.test.js.tmpl
@@ -9,12 +9,10 @@ import renderer from 'react-test-renderer';
 
 // snapshot test
 test('{{ComponentName}} SnapShot', () => {
-  const component = renderer.create(<{{ComponentName}} />);
-  // TODO スナップショットテストを記載する
-  const tree = component.toJSON();
-  expect(tree).toMatchSnapshot();
+  let component = null;
+  component = renderer.create(<{{ComponentName}} />).toJSON();
+  expect(component).toMatchSnapshot();
 });
-
 
 /*
 test('{{ComponentName}} enzyme', () => {
